# fyst

./: LICENSE  README.md  example.py  setup.cfg  test.py
fyst/: __init__.py  color.py  fyst.py  grid.py  style.py  table.py
