[metadata]
name = fyst
version = 0.1.0
author = Aaron Levine
author_email = ald.levine@gmail.com
url = https://github.com/Aldlevine/fyst.git
description = Format You Some Tables
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.package_data]
* = py.typed